package edu.fiuba.algo3.modelo;

public interface Obstaculo {
    public abstract boolean equals(Object obj);
}
